2025-05-19T01:25:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15102248521 # 648
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-19
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 993 1473 / 1006 1486
* notice: next accum: outdated-unq outdated-all / unq all: 994 1474 / 1007 1487
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-05] / [2025-05-18]

2025-05-18T01:27:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15090972745 # 647
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-18
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 992 1472 / 1006 1486
* notice: next accum: outdated-unq outdated-all / unq all: 993 1473 / 1006 1486
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-04] / []

2025-05-17T01:20:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15080173570 # 646
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-17
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 991 1471 / 1005 1485
* notice: next accum: outdated-unq outdated-all / unq all: 992 1472 / 1006 1486
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-03] / [2025-05-16]

2025-05-16T01:22:15Z: