@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-05-19T01:25:38Z",
-  "count_outdated" : 1474,
-  "uniques_outdated" : 994,
-  "count" : 1487,
-  "uniques" : 1007,
+  "timestamp" : "2025-05-20T01:23:18Z",
+  "count_outdated" : 1475,
+  "uniques_outdated" : 995,
+  "count" : 1488,
+  "uniques" : 1008,
   "clones" : [
-    {
-      "timestamp": "2025-05-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-07T00:00:00Z",
       "count": 1,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-05-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-19T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
